--- a/charts/consul/Chart.yaml
+++ b/charts/consul/Chart.yaml
@@ -4,7 +4,7 @@
 apiVersion: v2
 name: consul
 version: 1.2.0-dev
-appVersion: 1.16-dev
+appVersion: 1.15.1
 kubeVersion: ">=1.22.0-0"
 description: Official HashiCorp Consul Chart
 home: https://www.consul.io
@@ -16,7 +16,7 @@ annotations:
   artifacthub.io/prerelease: true
   artifacthub.io/images: |
     - name: consul
-      image: docker.mirror.hashicorp.services/hashicorppreview/consul-enterprise:1.16-dev
+      image: hashicorp/consul:1.15.1
     - name: consul-k8s-control-plane
       image: docker.mirror.hashicorp.services/hashicorppreview/consul-k8s-control-plane:1.2.0-dev
     - name: consul-dataplane
