--- a/charts/consul/templates/telemetry-collector-deployment.yaml
+++ b/charts/consul/templates/telemetry-collector-deployment.yaml
@@ -36,6 +36,7 @@ spec:
         "consul.hashicorp.com/connect-inject-status": "injected"
         # We aren't using tproxy and we don't have an original pod. This would be simpler if we made a path similar
         # to gateways
+        "consul.hashicorp.com/connect-service-port": "metricsserver"
         "consul.hashicorp.com/transparent-proxy": "false"
         "consul.hashicorp.com/transparent-proxy-overwrite-probes": "false"
         "consul.hashicorp.com/connect-k8s-version": {{ $.Chart.Version }}
@@ -69,7 +70,9 @@ spec:
           {{- toYaml .Values.global.extraLabels | nindent 8 }}
         {{- end }}
     spec:
-      serviceAccountName: {{ template "consul.fullname" . }}-telemetry-collector
+      # This needs to explicitly be consul-telemetry-collector because we look this up from each service consul-dataplane
+      # to forward metrics to it.
+      serviceAccountName: consul-telemetry-collector
       initContainers:
       # We're manually managing this init container instead of using the connect injector so that we don't run into
       # any race conditions on the connect-injector deployment or upgrade
@@ -202,21 +205,38 @@ spec:
                   name: {{ .Values.global.cloud.scadaAddress.secretName }}
                   key: {{ .Values.global.cloud.scadaAddress.secretKey }}
             {{- end}}
-
+            {{- if .Values.global.trustedCAs }}
+            - name: SSL_CERT_DIR
+              value: "/etc/ssl/certs:/trusted-cas"
+            {{- end }}
+            {{- include "consul.extraEnvironmentVars" .Values.telemetryCollector | nindent 12 }}
         command:
         - "/bin/sh"
         - "-ec"
         - |
+          {{- if .Values.global.trustedCAs }}
+          {{- range $i, $cert := .Values.global.trustedCAs }}
+          cat <<EOF > /trusted-cas/custom-ca-{{$i}}.pem
+          {{- $cert | nindent 10 }}
+          EOF
+          {{- end }}
+          {{- end }}
+
           consul-telemetry-collector agent
         {{- if .Values.telemetryCollector.customExporterConfig }}
         args:
         - -config-file-path /consul/config/config.json
         {{ end }}
-        {{- if .Values.telemetryCollector.customExporterConfig }}
         volumeMounts:
+          {{- if .Values.telemetryCollector.customExporterConfig }}
           - name: config
             mountPath: /consul/config
-        {{- end }}
+          {{- end }}
+          {{- if .Values.global.trustedCAs }}
+          - name: trusted-cas
+            mountPath: /trusted-cas
+            readOnly: false
+          {{- end }}
         resources:
         {{- if .Values.telemetryCollector.resources }}
           {{- toYaml .Values.telemetryCollector.resources | nindent 12 }}
@@ -347,6 +367,11 @@ spec:
         - emptyDir:
             medium: Memory
           name: consul-connect-inject-data
+        {{- if .Values.global.trustedCAs }}
+        - name: trusted-cas
+          emptyDir:
+            medium: "Memory"
+        {{- end }}
       {{- if .Values.global.tls.enabled }}
       {{- if not (or (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots) .Values.global.secretsBackend.vault.enabled) }}
         - name: consul-ca-cert
