--- a/charts/consul/templates/connect-inject-clusterrole.yaml
+++ b/charts/consul/templates/connect-inject-clusterrole.yaml
@@ -31,6 +31,7 @@ rules:
   - peeringacceptors
   - peeringdialers
   {{- end }}
+  - jwtproviders
   verbs:
   - create
   - delete
@@ -57,6 +58,7 @@ rules:
   - peeringacceptors/status
   - peeringdialers/status
   {{- end }}
+  - jwtproviders/status
   verbs:
   - get
   - patch
