API Gateway tenancy tests + fixes (#2201)
* Initial scaffolding

* Fix up some infinite reconciliation issues and initial other bugs

* overhaul

* get basic e2e working again

* Add resource ref validation

* Fix up namespace/reference grants

* fix binding

* clean up logging

* cleanup

* Get some binder unit tests working again

* log guard

* Fix unit test

* Fix up more binder tests

* get more binder tests working

* finish binder tests

* fix setter test

* light touches and un-bak passing tests

* Remove controller test as the wiring of deployments is predominantly tests via acceptance tests

* Update reference grant tests

* fix linter issues

* fix acceptance test linters

* Fix validation tests

* Fix up consul cache tests

* fixing up a few more tests

* Finish up translation test work

* Fix last bit of tests

--- a/acceptance/tests/fixtures/bases/api-gateway/apigateway.yaml
+++ b/acceptance/tests/fixtures/bases/api-gateway/apigateway.yaml
@@ -11,6 +11,21 @@ spec:
   - protocol: HTTP
     port: 8080
     name: http
+    allowedRoutes:
+      namespaces:
+        from: "All"
   - protocol: TCP
     port: 8081
     name: tcp
+    allowedRoutes:
+      namespaces:
+        from: "All"
+  - protocol: HTTPS
+    port: 8082
+    name: https
+    tls:
+      certificateRefs:
+        - name: "certificate"
+    allowedRoutes:
+      namespaces:
+        from: "All"
