--- a/charts/consul/templates/connect-inject-clusterrole.yaml
+++ b/charts/consul/templates/connect-inject-clusterrole.yaml
@@ -71,6 +71,7 @@ rules:
   - list
   - watch
   - delete
+  - update
 - apiGroups: [ "rbac.authorization.k8s.io" ]
   resources: [ "roles" ]
   verbs:
