--- a/charts/consul/templates/gateway-gatewayclass.yaml
+++ b/charts/consul/templates/gateway-gatewayclass.yaml
@@ -10,7 +10,7 @@ metadata:
     release: {{ .Release.Name }}
     component: api-gateway-controller
 spec:
-  controllerName: consul.hashicorp.com/consul-api-gateway-controller
+  controllerName: "hashicorp.com/consul-api-gateway-controller"
   parametersRef:
     group: consul.hashicorp.com
     kind: GatewayClassConfig
