Fix setting args for the telemetry-collector (#2224)
* Fix setting args for the telemetry-collector

Either the docker container or the execution method for the
telemetry-collector is making the args not get included on the process.
Switch to putting it directly in the command so we can ensure this works
as expected

* Fix bats test

--- a/charts/consul/templates/telemetry-collector-deployment.yaml
+++ b/charts/consul/templates/telemetry-collector-deployment.yaml
@@ -222,11 +222,10 @@ spec:
           {{- end }}
           {{- end }}
 
-          consul-telemetry-collector agent
-        {{- if .Values.telemetryCollector.customExporterConfig }}
-        args:
-        - -config-file-path /consul/config/config.json
-        {{ end }}
+          consul-telemetry-collector agent \
+          {{- if .Values.telemetryCollector.customExporterConfig }}
+          -config-file-path /consul/config/config.json \
+          {{ end }}
         volumeMounts:
           {{- if .Values.telemetryCollector.customExporterConfig }}
           - name: config
