api-gateway: create RoleBinding attaching Role to ServiceAccount (#2252)
* Create RoleBinding attaching Role to ServiceAccount

* Update ClusterRole for controller to allow management of RoleBindings

* Separate logic for RoleBinding management from logic for Role

* Use pointer receiver for all functions on Gatekeeper struct

* Use more descriptive name for NamespacedName arg on delete

* Clean up missed code in cherrypick

* Remove out-of-scope TODO

* Make Upsert docstring more robust, explaining dependency ordering

* Add RoleBindings to unit tests for Gatekeeper

--- a/charts/consul/templates/connect-inject-clusterrole.yaml
+++ b/charts/consul/templates/connect-inject-clusterrole.yaml
@@ -73,7 +73,7 @@ rules:
   - delete
   - update
 - apiGroups: [ "rbac.authorization.k8s.io" ]
-  resources: [ "roles" ]
+  resources: [ "roles", "rolebindings" ]
   verbs:
   - get
   - list
