Add missing resources to kustomization.yaml (#2255)
* Add missing JWT provider resource to kustomization.yaml
- Add missing assertions for JWT provider too.
* Add OSS tests for exported-services

--- a/acceptance/tests/fixtures/bases/crds-oss/exportedservices.yaml
+++ b/acceptance/tests/fixtures/bases/crds-oss/exportedservices.yaml
@@ -2,12 +2,12 @@
 # SPDX-License-Identifier: MPL-2.0
 
 apiVersion: consul.hashicorp.com/v1alpha1
-kind: ServiceExports
+kind: ExportedServices
 metadata:
-  name: exports
+  name: default
 spec:
   services:
   - name: frontend
-    namespace: frontend
     consumers:
-    - partition: other
+    - peer: peerName
+    - samenessGroup: groupName
