--- a/acceptance/tests/fixtures/bases/crds-oss/kustomization.yaml
+++ b/acceptance/tests/fixtures/bases/crds-oss/kustomization.yaml
@@ -2,12 +2,14 @@
 # SPDX-License-Identifier: MPL-2.0
 
 resources:
-  - ingressgateway.yaml
-  - mesh.yaml
-  - proxydefaults.yaml
-  - servicedefaults.yaml
-  - serviceintentions.yaml
-  - serviceresolver.yaml
-  - servicerouter.yaml
-  - servicesplitter.yaml
-  - terminatinggateway.yaml
+- ingressgateway.yaml
+- mesh.yaml
+- proxydefaults.yaml
+- servicedefaults.yaml
+- serviceintentions.yaml
+- serviceresolver.yaml
+- servicerouter.yaml
+- servicesplitter.yaml
+- terminatinggateway.yaml
+- jwtprovider.yaml
+- exportedservices.yaml
