Add CRD for ControlPlane RequestLimits (#2166)

--- a/charts/consul/templates/connect-inject-clusterrole.yaml
+++ b/charts/consul/templates/connect-inject-clusterrole.yaml
@@ -27,6 +27,7 @@ rules:
   - gatewayclassconfigs
   - meshservices
   - samenessgroups
+  - controlplanerequestlimits
   {{- if .Values.global.peering.enabled }}
   - peeringacceptors
   - peeringdialers
@@ -54,6 +55,7 @@ rules:
   - ingressgateways/status
   - terminatinggateways/status
   - samenessgroups/status
+  - controlplanerequestlimits/status
   {{- if .Values.global.peering.enabled }}
   - peeringacceptors/status
   - peeringdialers/status
