--- a/charts/consul/templates/crd-controlplanerequestlimits.yaml
+++ b/charts/consul/templates/crd-controlplanerequestlimits.yaml
@@ -1,11 +1,11 @@
-{{- if and .Values.connectInject.enabled .Values.global.peering.enabled }}
+{{- if .Values.connectInject.enabled }}
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.12.0
-  name: peeringacceptors.consul.hashicorp.com
+  name: controlplanerequestlimits.consul.hashicorp.com
 spec:
   labels:
     app: {{ template "consul.name" . }}
@@ -15,12 +15,10 @@ spec:
     component: crd
   group: consul.hashicorp.com
   names:
-    kind: PeeringAcceptor
-    listKind: PeeringAcceptorList
-    plural: peeringacceptors
-    shortNames:
-    - peering-acceptor
-    singular: peeringacceptor
+    kind: ControlPlaneRequestLimit
+    listKind: ControlPlaneRequestLimitList
+    plural: controlplanerequestlimits
+    singular: controlplanerequestlimit
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -28,10 +26,6 @@ spec:
       jsonPath: .status.conditions[?(@.type=="Synced")].status
       name: Synced
       type: string
-    - description: The last successful synced time of the resource with Consul
-      jsonPath: .status.lastSyncedTime
-      name: Last Synced
-      type: date
     - description: The age of the resource
       jsonPath: .metadata.creationTimestamp
       name: Age
@@ -39,7 +33,8 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: PeeringAcceptor is the Schema for the peeringacceptors API.
+        description: ControlPlaneRequestLimit is the Schema for the controlplanerequestlimits
+          API.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -54,32 +49,108 @@ spec:
           metadata:
             type: object
           spec:
-            description: PeeringAcceptorSpec defines the desired state of PeeringAcceptor.
+            description: ControlPlaneRequestLimitSpec defines the desired state of
+              ControlPlaneRequestLimit.
             properties:
-              peer:
-                description: Peer describes the information needed to create a peering.
+              acl:
                 properties:
-                  secret:
-                    description: Secret describes how to store the generated peering
-                      token.
-                    properties:
-                      backend:
-                        description: 'Backend is where the generated secret is stored.
-                          Currently supports the value: "kubernetes".'
-                        type: string
-                      key:
-                        description: Key is the key of the secret generated.
-                        type: string
-                      name:
-                        description: Name is the name of the secret generated.
-                        type: string
-                    type: object
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
                 type: object
-            required:
-            - peer
+              catalog:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              configEntry:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              connectCA:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              coordinate:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              discoveryChain:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              health:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              intention:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              kv:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              mode:
+                type: string
+              perparedQuery:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              readRate:
+                type: number
+              session:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              tenancy:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              txn:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              writeRate:
+                type: number
             type: object
           status:
-            description: PeeringAcceptorStatus defines the observed state of PeeringAcceptor.
             properties:
               conditions:
                 description: Conditions indicate the latest available observations
@@ -116,28 +187,6 @@ spec:
                   synced with Consul.
                 format: date-time
                 type: string
-              latestPeeringVersion:
-                description: LatestPeeringVersion is the latest version of the resource
-                  that was reconciled.
-                format: int64
-                type: integer
-              secret:
-                description: SecretRef shows the status of the secret.
-                properties:
-                  backend:
-                    description: 'Backend is where the generated secret is stored.
-                      Currently supports the value: "kubernetes".'
-                    type: string
-                  key:
-                    description: Key is the key of the secret generated.
-                    type: string
-                  name:
-                    description: Name is the name of the secret generated.
-                    type: string
-                  resourceVersion:
-                    description: ResourceVersion is the resource version for the secret.
-                    type: string
-                type: object
             type: object
         type: object
     served: true
