--- a/control-plane/config/crd/bases/consul.hashicorp.com_controlplanerequestlimits.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_controlplanerequestlimits.yaml
@@ -7,16 +7,14 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.12.0
-  name: samenessgroups.consul.hashicorp.com
+  name: controlplanerequestlimits.consul.hashicorp.com
 spec:
   group: consul.hashicorp.com
   names:
-    kind: SamenessGroup
-    listKind: SamenessGroupList
-    plural: samenessgroups
-    shortNames:
-    - sameness-group
-    singular: samenessgroup
+    kind: ControlPlaneRequestLimit
+    listKind: ControlPlaneRequestLimitList
+    plural: controlplanerequestlimits
+    singular: controlplanerequestlimit
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -24,10 +22,6 @@ spec:
       jsonPath: .status.conditions[?(@.type=="Synced")].status
       name: Synced
       type: string
-    - description: The last successful synced time of the resource with Consul
-      jsonPath: .status.lastSyncedTime
-      name: Last Synced
-      type: date
     - description: The age of the resource
       jsonPath: .metadata.creationTimestamp
       name: Age
@@ -35,7 +29,8 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: SamenessGroup is the Schema for the samenessgroups API
+        description: ControlPlaneRequestLimit is the Schema for the controlplanerequestlimits
+          API.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -50,35 +45,106 @@ spec:
           metadata:
             type: object
           spec:
-            description: SamenessGroupSpec defines the desired state of SamenessGroup.
+            description: ControlPlaneRequestLimitSpec defines the desired state of
+              ControlPlaneRequestLimit.
             properties:
-              defaultForFailover:
-                description: DefaultForFailover indicates that upstream requests to
-                  members of the given sameness group will implicitly failover between
-                  members of this sameness group. When DefaultForFailover is true,
-                  the local partition must be a member of the sameness group or IncludeLocal
-                  must be set to true.
-                type: boolean
-              includeLocal:
-                description: IncludeLocal is used to include the local partition as
-                  the first member of the sameness group. The local partition can
-                  only be a member of a single sameness group.
-                type: boolean
-              members:
-                description: Members are the partitions and peers that are part of
-                  the sameness group. If a member of a sameness group does not exist,
-                  it will be ignored.
-                items:
-                  properties:
-                    partition:
-                      description: The partitions and peers that are part of the sameness
-                        group. A sameness group member cannot define both peer and
-                        partition at the same time.
-                      type: string
-                    peer:
-                      type: string
-                  type: object
-                type: array
+              acl:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              catalog:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              configEntry:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              connectCA:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              coordinate:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              discoveryChain:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              health:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              intention:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              kv:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              mode:
+                type: string
+              perparedQuery:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              readRate:
+                type: number
+              session:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              tenancy:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              txn:
+                properties:
+                  readRate:
+                    type: number
+                  writeRate:
+                    type: number
+                type: object
+              writeRate:
+                type: number
             type: object
           status:
             properties:
