--- a/acceptance/tests/fixtures/bases/crds-oss/servicedefaults.yaml
+++ b/acceptance/tests/fixtures/bases/crds-oss/servicedefaults.yaml
@@ -21,7 +21,7 @@ spec:
       passiveHealthCheck:
         interval: 1s
         maxFailures: 10
-        enforcing_consecutive_5xx: 60
+        enforcingConsecutive5xx: 60
         maxEjectionPercent: 100
         baseEjectionTime: 20s
     - name: "bar"
