Add additional helm hook for resource management (#2259)
* Add additional helm hook for resource management

* Move GatewayClassConfig CRD to templates

* Add CRDs to templates

* Add value to values.yaml

* Remove GatewayClass and GatewayClassConfig bats

* Fix CRD ExportedServices

* Change -release to -release-name on gateway-resources subcommand

* switch to pointer to avoid lock copy for linter

* Move forcible test cleanup to before helm delete since it will now drop CRDs

* adjust cleanup logic since it looks like the testing framework sometimes uninstalls the helm chart early

* Fix cli unit test and drop CRD reading data since it's no longer embedded in the CLI

* Add BATs for Gateway CRDs

* Add BATs for Gateway Resources

* Update Contributing

---------

Co-authored-by: Thomas Eckert <teckert@hashicorp.com>

--- a/charts/consul/templates/gateway-cleanup-podsecuritypolicy.yaml
+++ b/charts/consul/templates/gateway-cleanup-podsecuritypolicy.yaml
@@ -1,5 +1,4 @@
-{{- if .Values.global.enablePodSecurityPolicies }}
-{{- if .Values.connectInject.enabled }}
+{{- if (and .Values.connectInject.enabled .Values.global.enablePodSecurityPolicies)}}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
@@ -30,5 +29,4 @@ spec:
   fsGroup:
     rule: 'RunAsAny'
   readOnlyRootFilesystem: false
-{{- end }}
 {{- end }}
