--- a/charts/consul/templates/crd-grpcroutes.yaml
+++ b/charts/consul/templates/crd-grpcroutes.yaml
@@ -1,6 +1,4 @@
-# Copyright (c) HashiCorp, Inc.
-# SPDX-License-Identifier: MPL-2.0
-
+{{- if and .Values.connectInject.enabled .Values.connectInject.apiGateway.manageExternalCRDs }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -9,6 +7,12 @@ metadata:
     gateway.networking.k8s.io/bundle-version: v0.6.2
     gateway.networking.k8s.io/channel: experimental
   creationTimestamp: null
+  labels:
+    app: {{ template "consul.name" . }}
+    chart: {{ template "consul.chart" . }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
+    component: crd
   name: grpcroutes.gateway.networking.k8s.io
 spec:
   group: gateway.networking.k8s.io
@@ -759,3 +763,4 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
+{{- end }}
